--- a/Heart Disease Prediction with Neural Networks.ipynb
+++ b/Heart Disease Prediction with Neural Networks.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+     
      ]
     }
    ],
@@ -43,15 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Importing the Dataset\n",
-    "\n",
-    "The dataset is available through the University of California, Irvine Machine learning repository. Here is the URL:\n",
-    "\n",
-    "http:////archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
-    "\n",
-    "This dataset contains patient data concerning heart disease diagnosis that was collected at several locations around the world. There are 76 attributes, including age, sex, resting blood pressure, cholestoral levels, echocardiogram data, exercise habits, and many others. To data, all published studies using this data focus on a subset of 14 attributes - so we will do the same. More specifically, we will use the data collected at the Cleveland Clinic Foundation.\n",
-    "\n",
-    "To import the necessary data, we will use pandas' built in read_csv() function. Let's get started!"
+    "### 1. Importing the Dataset\n"
    ]
   },
   {
